re PR libobjc/12035 (Patch for libobjc/gc.c that fixes compilation error of Objective-C with garbage collector enabled)

2004-12-20  Andrew Pinski  <pinskia@physics.uc.edu>

        PR libobjc/12035
        * gc.c: Remove definition of LOGWL, modWORDSZ, and divWORDSZ since
        they are not used.
        Include limits.h and stdlib.h.
        Define BITS_PER_WORD.

From-SVN: r92438